# window-control

./: .gitignore  APP-REQUIREMENTS.MD  CLAUDE.md  README.md  REQUIREMENTS.TXT  pyproject.toml  requirements.txt  retag.sh
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-14-lock-screen-service.md
scripts/: bump_version.py  download_assets.py  gen_assets.py  webrtc_spike.py
src/: config.py  main.py  service_main.py  updater.py
src/client/: app.js  index.html  manifest.json  style.css  windows_panel.js
src/gui/: launcher.py  service_status.py  tray.py  window_list.py
src/server/: adb_manager.py  app.py  input_handler.py  instance_manager.py  mediamtx_manager.py  preview.py  scrcpy_session.py  stream.py  tailscale.py  webrtc_handler.py  window_manager.py
src/service/: auto_unlock.py  desktop_monitor.py  pipe_client.py  pipe_server.py
src/stubs/: mss_stub.py  win32_stub.py
tests/: test_app.py  test_assets.py  test_auto_unlock.py  test_build_files.py  test_config.py  test_desktop_monitor.py  test_input_handler.py  test_launcher.py  test_main.py  test_mediamtx_manager.py  test_pipe_protocol.py  test_scrcpy_session.py  test_stream.py  test_tailscale.py  test_tray.py  test_updater.py  test_window_list.py  test_window_manager.py
