[project]
name = "window-control"
version = "1.2.9"
description = "Stream Windows app windows to iPhone over Tailscale"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "Pillow>=10.0.0",
    "PyTurboJPEG>=1.7.0",
    "qrcode[pil]>=7.4.2",
    "pystray>=0.19.5",
    "PyQt5>=5.15.10",
    "psutil>=5.9.0",
    "numpy>=1.26.0",
    "mss>=9.0.0",
    "httpx>=0.27.0",
    "pywin32>=306; sys_platform == 'win32'",
    "dxcam>=0.0.5; sys_platform == 'win32'",
    "keyring>=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.6.0",
]

[tool.uv]
package = false
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
