[project]
name = "window-control"
version = "1.2.33"
description = "Stream Windows app windows to iPhone over Tailscale"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "Pillow>=10.0.0",
    "qrcode[pil]>=7.4.2",
    "pystray>=0.19.5",
    "PyQt5>=5.15.10",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "imageio-ffmpeg>=0.4.9",
    "aiortc>=1.9.0",
    "nest-asyncio>=1.6.0",
    "aiohttp>=3.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.6.0",
]

[tool.uv]
package = false
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
